# python-filecache

./: .coveragerc  .cvsignore  .gitignore  .travis.yml  ChangeLog  ChangeLog-spell-corrected  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  NEWS  NEWS.md  README.rst  README.txt  VERSION.py  __pkginfo__.py  appveyor.yml  circle.yml  pyficache.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
admin-tools/: check-2.4-2.7-versions.sh  check-3.0-3.2-versions.sh  check-3.1-3.2-versions.sh  check-3.3-3.5-versions.sh  check-3.6-3.10-versions.sh  check-newer-versions.sh  check-newest-versions.sh  checkout_common.sh  how-to-make-a-release.md  install-all-2.4-2.7.sh  install-all-3.0-3.2.sh  install-all-3.3-3.5.sh  install-all-3.6-3.10.sh  install-all-newest.sh  make-dist-2.4-2.7.sh  make-dist-3.0-to-3.2.sh  make-dist-3.1-3.2.sh  make-dist-3.3-to-3.5.sh  make-dist-3.6-to-3.10.sh  make-dist-newer.sh  make-dist-newest.sh  make-dist-older.sh  merge-for-2.4.sh  merge-for-3.0.sh  merge-for-3.1.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-2.4-2.7-versions  pyenv-3-versions  pyenv-3.1-3.2-versions  pyenv-3.1-3.5-versions  pyenv-3.6-3.10-versions  pyenv-newer-versions  pyenv-newest-versions  setup-master.sh  setup-python-2.4.sh  setup-python-3.0.sh  setup-python-3.1.sh  setup-python-3.3.sh  setup-python-3.6.sh
docs/: conf.py
pyficache/: .gitignore  VERSION.py  __init__.py  code_positions.py  line_numbers.py  main.py  pyasm.py  version.py
test/: .gitignore  devious.py  dos-file  mapped.py  mixed-eol-file  seven-313.pyasm  test-pyficache.py  test-remap.py  test_pyasm.py  test_pyficache.py  test_remap.py  test_update_cache.py  unmapped.py
