[metadata]
description_file = README.rst

# Location of test programs. "where" can be given several times.
# If "where is a directory, then that's the working directory.
where=./test

# Our tests are also executable since they are allowed to be run
# individually. By default nose excludes these.
exe=on

# Show individual tests run
verbosity=2

[bdist_rpm]
packager = Rocky Bernstein  <rocky@gnu.org>
provides = pyficache
